Hide scrollbar, delete twitter, fixed nav bar

--- a/app/globals.css
+++ b/app/globals.css
@@ -136,6 +136,14 @@
   }
 }
 
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
 .gaming-glow {
   animation: glow 2s ease-in-out infinite alternate;
 }
